--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "lint:fix": "ng lint --fix",
+    "lint:fix": "ng lint --fix && npx stylelint '**/*.scss' --fix",
     "prepare": "husky install"
   },
   "private": true,
@@ -23,6 +23,8 @@
     "@angular/router": "~13.2.0",
     "ramda": "^0.28.0",
     "rxjs": "~7.5.0",
+    "stylelint-config-prettier-scss": "^0.0.1",
+    "stylelint-order": "^5.0.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
@@ -54,6 +56,10 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "lint-staged": "^12.3.5",
     "prettier": "^2.5.1",
+    "stylelint": "^14.5.3",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^25.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
     "typescript": "~4.5.2"
   },
   "lint-staged": {
